Bug 488050 - upvar2: incorrect optimization of delete function_name (r=igor).